# pydantic-obstore

./: README.md  justfile  pyproject.toml  test.py
.github/workflows/: ci-nix.yaml  ci.yaml
src/pydantic_obstore/: __init__.py  config.py  store.py
tests/: test_config_models.py  test_get_options.py  test_integration.py  test_object_meta.py
